--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -26,5 +26,11 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
 
+    - name: Installing dependencies
     - run: yarn install
+    
+    - name: Run ESLint
+    - run: yarn lint
+    
+    - name: Run Tests
     - run: yarn test
